Ajustes no pom, no app properties e no index.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8002
+spring.application.name=tasks-front
+server.servlet.context-path=/tasks
 
 backend.host=${BACKEND_HOST:127.0.0.1}
 backend.port=${BACKEND_PORT:8001}
+backend.context=${BACKEND_CONTEXT:tasks}
 app.version=${APP_VERSION:testing}
